# proto-loopo

./: .gitignore  Loopo.jucer  Makefile  PUNTFILE  README.md  Setup.hs  add-libs.rb  g  loopo.cabal  loopo.filtergraph  merge-libs.rb  stack.yaml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Builds/MacOSX/Loopo.xcodeproj/: project.pbxproj
Builds/MacOSX/Loopo.xcodeproj/project.xcworkspace/xcuserdata/gmt.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/Loopo.xcodeproj/xcshareddata/xcschemes/: Loopo - All.xcscheme
Builds/MacOSX/Loopo.xcodeproj/xcuserdata/gmt.xcuserdatad/xcschemes/: Loopo - All.xcscheme  xcschememanagement.plist
Builds/MacOSX/SamplerPlugin.xcodeproj/: project.pbxproj
Builds/MacOSX/SamplerPlugin.xcodeproj/project.xcworkspace/xcuserdata/gmt.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/SamplerPlugin.xcodeproj/xcuserdata/gmt.xcuserdatad/xcschemes/: SamplerPlugin - All.xcscheme  xcschememanagement.plist
Source/: Foo.hs  LoopStreamer.h  Main.cpp  SamplerPluginDemo.h  Wrapper.cpp  Wrapper.h  paths
Source/Foreign/Hoppy/Example/Internal/: EmptyCpp.hs
cpp/: utils.cpp  utils.hpp
