name:                loopo
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

--executable tmi
library
  hs-source-dirs:      Source
  --main-is:             Main.hs
  other-modules:       Foo
  default-language:    Haskell2010
  --ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       vector,
                       hoppy-example,
                       hoppy-example-cpp
